# Imoveis_disponiveis

./: .env.example  .gitignore  Dockerfile  README.md  casa-radar-prompt-final.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  state.json
.github/workflows/: radar.yml
casa_radar/: __init__.py
casa_radar/core/: config.py  dedup.py  filters.py  models.py  runner.py  state.py  utils.py
casa_radar/dashboard/: generator.py
casa_radar/notifiers/: __init__.py  base.py  email.py  messages.py  telegram.py  whatsapp.py
casa_radar/sources/: __init__.py  base.py  casasapo.py  custojusto.py  idealista.py  idealista_api.py  imovirtual.py  supercasa.py
docs/: index.html
tests/: conftest.py  test_config.py  test_dashboard.py  test_dedup.py  test_filters.py  test_idealista_api.py  test_notifier_extras.py  test_notifiers.py  test_parsers.py  test_runner.py  test_state.py  test_utils.py
tests/fixtures/: casasapo.html  custojusto.html  idealista.html  idealista_api.json  imovirtual.html  imovirtual_css.html  supercasa.html
